// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"exec" option should work with "Boolean" value: css 1`] = `
"a {
    color: green
}"
`;

exports[`"exec" option should work with "Boolean" value: errors 1`] = `Array []`;

exports[`"exec" option should work with "Boolean" value: warnings 1`] = `Array []`;

exports[`"exec" option should work with "JSS" parser: css 1`] = `
"a {
    color: yellow
}"
`;

exports[`"exec" option should work with "JSS" parser: errors 1`] = `Array []`;

exports[`"exec" option should work with "JSS" parser: warnings 1`] = `Array []`;
